smart-lock/tests/ui/mutate_read_locked.stderr
warning: variable does not need to be mutable
  --> tests/ui/mutate_read_locked.rs:11:9
   |
11 |     let mut guard = state.builder().read_x().lock().await;
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0594]: cannot assign to data in dereference of `FieldGuard<'_, u32, ReadLocked>`
  --> tests/ui/mutate_read_locked.rs:12:5
   |
12 |     *guard.x = 1; // ERROR: ReadLocked has no DerefMut
   |     ^^^^^^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `FieldGuard<'_, u32, ReadLocked>`
